<resources>
    <string name="app_name">Manage Staff</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Fragment Detail</string>
    <string name="error_email_blank">Email cannot leave empty\n</string>
    <string name="error_email_invalid">Email format invalid\n</string>
    <string name="error_password">Password cannot leave empty!\n</string>
    <string name="action_search">search</string>
    <string name="action_sort">sort</string>
    <string name="action_profile">profile</string>
    <string name="txt_fullname">FullName: %s</string>
    <string name="txt_email">Email: %s</string>
    <string name="txt_birthdate">BirthDate: %s</string>
    <string name="txt_phonenumber">Phone Number: %s</string>
    <string name="txt_gender">Gender: %s</string>
    <string name="error_login_failed">Invalid email or password!</string>
    <string name="title_login">Login</string>
    <string name="title_profile">Profile</string>
    <string name="title_home">Home</string>
    <string name="title_register">Register</string>
    <string name="title_settings">Settings</string>
    <string name="title_done">Done</string>
    <string name="action_search_user">Search user</string>
    <string name="item_text_notifications">Notifications</string>
    <string name="action_update">Update</string>
    <string name="action_dark_mode">Dark mode</string>
    <string name="action_languages">language</string>
    <string name="font_size">Font size</string>
    <string name="title_others_menu">Other options</string>
    <string name="title_statistics">Chart</string>
    <string name="action_clear">Clean</string>
    <string name="title_about">About</string>
    <string name="title_import">"Import "</string>
    <string name="action_logout">Logout</string>
    <string name="title_copyright">\u00a9 2023 DevZen Studio</string>
    <string name="title_app_name">My android app</string>
</resources>